<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink_light"
    tools:context=".Activity2">


    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/gentium_book_basic_bold_italic"
        android:text="@string/app_name"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/gentium_book_basic_bold_italic"
        android:text="@string/currency"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="68dp"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/currency"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/meters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/gentium_book_basic_bold_italic"
        android:text="@string/meters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currency" />

    <EditText
        android:id="@+id/number_of_meters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:ems="3"
        android:fontFamily="@font/gentium_book_basic_bold_italic"
        android:hint="0"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:rotationX="0"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/meters"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/article_price_of_one_meter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/gentium_book_basic_bold_italic"
        android:text="@string/price_of_one_meter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meters" />

    <EditText
        android:id="@+id/price_of_one_meter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="168dp"
        android:ems="4"
        android:fontFamily="@font/gentium_book_basic_bold_italic"
        android:hint="0"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/article_price_of_one_meter"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/article_price_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/gentium_book_basic_bold_italic"
        android:text="@string/price_change_rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/article_price_of_one_meter" />

    <EditText
        android:id="@+id/price_change_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="216dp"
        android:ems="1"
        android:fontFamily="@font/gentium_book_basic_bold_italic"
        android:hint="0"
        android:inputType="numberDecimal"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/article_price_change"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/article_av_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/gentium_book_basic_bold_italic"
        android:text="@string/available_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/article_price_change" />

    <EditText
        android:id="@+id/available_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="264dp"
        android:ems="4"
        android:fontFamily="@font/gentium_book_basic_bold_italic"
        android:hint="0"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/article_av_price"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/article_interest_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/gentium_book_basic_bold_italic"
        android:text="@string/interest_rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/article_av_price" />

    <EditText
        android:id="@+id/interest_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="316dp"
        android:ems="3"
        android:fontFamily="@font/gentium_book_basic_bold_italic"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:hint="0"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/article_interest_rate"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/article_replenishment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/gentium_book_basic_bold_italic"
        android:text="@string/replenishment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/article_interest_rate" />

    <EditText
        android:id="@+id/replenishment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="364dp"
        android:ems="4"
        android:fontFamily="@font/gentium_book_basic_bold_italic"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:hint="0"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/article_replenishment"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="432dp"
        android:backgroundTint="@color/pink_dark"
        android:text="@string/btn_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>